# context_server

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_ORIGINAL.md  CLI_README.md  CONTEXT_SERVER_VISION.md  Cargo.toml  DOCRAG_VISION.md  Dockerfile  ENHANCEMENT_PLAN.md  LICENSE  Makefile  PHASE1_TEST_SUMMARY.md  PHASE2_1_IMPLEMENTATION_SUMMARY.md  PHASE2_2_IMPLEMENTATION_SUMMARY.md  PHASE3_1_IMPLEMENTATION_SUMMARY.md  PHASE3_2_IMPLEMENTATION_SUMMARY.md  PHASE4_1_IMPLEMENTATION_SUMMARY.md  PHASE4_2_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  README_MCP.md  REFACTORING_TODO.md  SEARCH_PIPELINE_ANALYSIS.md  audit.md  docker-compose.yml  hierarchical_graph_schema.sql  init.sql  notes.md  pyproject.toml  test_completion.py  test_completion_integration.py  test_tui_integration.sh  todo.md
.claude/commands/: audit.md  commit.md  read_todo.md  update_todo.md
context_server/: __init__.py
context_server/api/: __init__.py  contexts.py  documents.py  error_handlers.py  jobs.py  main.py  models.py  search.py  v2_endpoints.py
context_server/cli/: __init__.py  claude_md_template.py  config.py  help_formatter.py  main.py  utils.py
context_server/cli/commands/: claude.py  code.py  completion.py  context.py  dev.py  docs.py  examples.py  extract.py  get.py  job.py  search.py  server.py  setup.py  tui.py
context_server/core/: __init__.py  advanced_processing.py  advanced_search_api.py  cache.py  chunking.py  cleaning.py  code_search.py  content_analysis.py  crawl4ai_extraction.py  embedding_strategies.py  embeddings.py  enhanced_processing.py  enhanced_storage.py  expansion.py  hierarchical_graph_builder.py  llm_analysis_service.py  llm_endpoints.py  multi_embedding_service.py  multi_modal_search.py  pipeline.py  processing.py  progressive_refinement.py  query_analysis.py  relationship_mapping.py  simple_llm_service.py  storage.py  summarization.py  utils.py
context_server/mcp_server/: __init__.py  client.py  config.py  main.py  tools.py
context_server/models/: __init__.py  validation.py
scripts/: start_mcp_server.py  test_mcp_integration.py
src/: context_client.rs  main.rs  smart_extract.py
src/core/: cleaning.py  cli.py  crawl4ai_extraction.py  extraction.py  logging.py  processors.py  utils.py
src/utils/: pdf_spliter.py  segment_tables.py
tests/integration/: test_extraction_integration.py
tests/unit/: test_advanced_processing.py  test_advanced_search_api.py  test_cleaning.py  test_code_search.py  test_content_analysis.py  test_crawl4ai_extraction.py  test_embedding_strategies.py  test_enhanced_processing.py  test_llm_endpoints.py  test_logging.py  test_multi_embedding_service.py  test_multi_modal_search.py  test_processing.py  test_progressive_refinement.py  test_query_analysis.py  test_relationship_mapping.py  test_smart_extract.py  test_utils.py  test_v2_endpoints.py
(+44 files in other folders)
