[package]
name = "context_tui_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
syntect = "5.0"
crossterm = "0.27"
anyhow = "1.0"
